Update Swedish translation.
Updated po/sv.po to 1012t0f0u.
Updated man/po/sv.po to 1661t0f0u.
Updated scripts/po/sv.po to 479t0f0u.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-05-21 06:27+0300\n"
-"PO-Revision-Date: 2009-04-14 09:38+0100\n"
+"PO-Revision-Date: 2009-06-18 21:37+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -5898,6 +5898,8 @@ msgid ""
 "Do not clean the source tree (implies B<-b> if nothing else has been "
 "selected among B<-B>, B<-A> or B<-S>)."
 msgstr ""
+"Städa inte upp byggträdet (implicerar B<-b> om inget annat har valts "
+"bland B<-B>, B<-A> eller B<-S>)."
 
 # type: TP
 #. type: TP
@@ -8431,9 +8433,9 @@ msgstr ""
 # type: TP
 #. type: TP
 #: ../../man/dpkg-parsechangelog.1:84
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--since> I<version>, B<-s>I<version>,B< -v>I<version>"
-msgstr "B<--since>, B<-s>, B<-v> I<version>"
+msgstr "B<--since> I<version>, B<-s>I<version>,B< -v>I<version>"
 
 # type: Plain text
 #. type: Plain text
@@ -8444,9 +8446,9 @@ msgstr "ta med alla poster efter I<version>."
 # type: TP
 #. type: TP
 #: ../../man/dpkg-parsechangelog.1:87
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--until> I<version>, B<-u>I<version>"
-msgstr "B<--until>, B<-u> I<version>"
+msgstr "B<--until> I<version>, B<-u>I<version>"
 
 # type: Plain text
 #. type: Plain text
@@ -8457,9 +8459,9 @@ msgstr "ta med alla ändringar före I<version>."
 # type: TP
 #. type: TP
 #: ../../man/dpkg-parsechangelog.1:90
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--from> I<version>, B<-f>I<version>"
-msgstr "B<--from>, B<-f> I<version>"
+msgstr "B<--from> I<version>, B<-f>I<version>"
 
 # type: Plain text
 #. type: Plain text
@@ -8470,9 +8472,9 @@ msgstr "ta med alla ändringar från och med I<version>."
 # type: TP
 #. type: TP
 #: ../../man/dpkg-parsechangelog.1:93
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--to> I<version>, B<-t>I<version>"
-msgstr "B<--to>, B<-t> I<version>"
+msgstr "B<--to> I<version>, B<-t>I<version>"
 
 # type: Plain text
 #. type: Plain text
@@ -8483,9 +8485,9 @@ msgstr "ta med alla ändringar till och med I<version>."
 # type: Plain text
 #. type: TP
 #: ../../man/dpkg-parsechangelog.1:96
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--count> I<number>, B<-c>I<number>, B<-n>I<number>"
-msgstr "B<--count>, B<-c>, B<-n> I<antal>"
+msgstr "B<--count> I<antal>, B<-c>I<antal>, B<-n>I<antal>"
 
 # type: Plain text
 #. type: Plain text
@@ -8500,9 +8502,9 @@ msgstr ""
 # type: TP
 #. type: TP
 #: ../../man/dpkg-parsechangelog.1:100
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--offset> I<number>, B<-o>I<number>"
-msgstr "B<--offset>, B<-o> I<antal>"
+msgstr "B<--offset> I<antal>, B<-o>I<antal>"
 
 # type: Plain text
 #. type: Plain text
@@ -10304,12 +10306,11 @@ msgstr ""
 # type: Plain text
 #. type: Plain text
 #: ../../man/dpkg-source.1:106
-#, fuzzy
 msgid ""
 "Read substitution variables in I<substvarsfile>; the default is to not read "
 "any file."
 msgstr ""
-"B<Rekommenderas ej>. Läser substitueringsvariabler från I<substvarfil>; "
+"Läs substitueringsvariabler från I<substvarfil>; "
 "standardvärde är att inte läsa någon fil."
 
 # type: TP
@@ -10513,7 +10514,6 @@ msgstr "B<--require-valid-signature>"
 # type: Plain text
 #. type: Plain text
 #: ../../man/dpkg-source.1:191
-#, fuzzy
 msgid ""
 "Refuse to unpack the source package if it doesn't contain an OpenPGP "
 "signature that can be verified either with the user's I<trustedkeys.gpg> "
@@ -10522,7 +10522,8 @@ msgid ""
 "keyrings/debian-maintainers.gpg>)."
 msgstr ""
 "Vägra packa upp källkodspaketet om det inte innehåller en OpenPGP-signatur "
-"som kan verifieras antingen med användarens I<trustedkeys.gpg>-nyckelring "
+"som kan verifieras antingen med användarens I<trustedkeys.gpg>-nyckelring, "
+"en av de säljarspecifka nyckelringarna, "
 "eller en av de officiella Debiannyckelringarna (I</usr/share/keyrings/debian-"
 "keyring.gpg> och I</usr/share/keyrings/debian-maintainers.gpg>)."
 
@@ -10927,7 +10928,6 @@ msgstr "Format: 3.0 (quilt)"
 # type: Plain text
 #. type: Plain text
 #: ../../man/dpkg-source.1:358
-#, fuzzy
 msgid ""
 "A source package in this format contains at least an original tarball (B<."
 "orig.tar.>I<ext> where I<ext> can be B<gz>, B<bz2> and B<lzma>) and a debian "
@@ -10938,7 +10938,8 @@ msgstr ""
 "Ett källkodspaket i detta format innehåller åtminstone en original-tarboll "
 "(B<.orig.tar.>I<ext>, där I<ext> kan vara B<gz>, B<bz2> och B<lzma>) och en "
 "Debiantarboll (B<.debian.tar.>I<ext>). Den kan även innehålla ytterligare "
-"original-tarbollar (B<.orig->I<komponent>B<.tar.>I<ext>)."
+"original-tarbollar (B<.orig->I<komponent>B<.tar.>I<ext>). I<komponent> kan "
+"endast innehålla alfanumeriska tecken och bindestreck (\"-\")."
 
 # type: Plain text
 #. type: Plain text
@@ -12254,28 +12255,27 @@ msgstr ""
 # type: TH
 #. type: TH
 #: ../../man/dpkg-vendor.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-vendor"
-msgstr "dpkg-divert"
+msgstr "dpkg-vendor"
 
 # type: TH
 #. type: TH
 #: ../../man/dpkg-vendor.1:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "2009-05-10"
-msgstr "2009-01-07"
+msgstr "2009-05-10"
 
 #. type: Plain text
 #: ../../man/dpkg-vendor.1:4
 msgid "dpkg-vendor - queries information about distribution vendors"
-msgstr ""
+msgstr "dpkg-vendor - frågar efter information om distributionsåterförsäljare"
 
 # type: Plain text
 #. type: Plain text
 #: ../../man/dpkg-vendor.1:8
-#, fuzzy
 msgid "B<dpkg-vendor> [I<option>...] I<command>"
-msgstr "B<dpkg-query> [I<flaggor>...] I<åtgärd>"
+msgstr "B<dpkg-vendor> [I<flaggor>...] I<åtgärd>"
 
 #. type: Plain text
 #: ../../man/dpkg-vendor.1:13
@@ -12284,13 +12284,16 @@ msgid ""
 "dpkg/origins>. B</etc/dpkg/origins/default> contains information about the "
 "current vendor."
 msgstr ""
+"B<dpkg-vendor> är ett verktyg för att fråga efter återförsäljare som "
+"finns i I</etc/dpkg/origins>. B</etc/dpkg/origins/default> innehåller "
+"information om den aktuella återförsäljaren."
 
 # type: TP
 #. type: TP
 #: ../../man/dpkg-vendor.1:15
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--is>I< vendor>"
-msgstr "B<--instdir=>I<katalog>"
+msgstr "B<--is>I< återförsäljare>"
 
 #. type: Plain text
 #: ../../man/dpkg-vendor.1:19
@@ -12298,13 +12301,15 @@ msgid ""
 "Exits with 0 if the current vendor is I<vendor>. Otherwise exits with non-"
 "zero."
 msgstr ""
+"Avslutar med 0 om den aktuella återförsäljaren är I<återförsäljare>. "
+"I annat fall avslutas programmet med icke-noll."
 
 # type: TP
 #. type: TP
 #: ../../man/dpkg-vendor.1:19
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--derives-from>I< vendor>"
-msgstr "B<--divert>I< omdirigera-till>"
+msgstr "B<--derives-from>I< återförsäljare>"
 
 #. type: Plain text
 #: ../../man/dpkg-vendor.1:24
@@ -12313,13 +12318,17 @@ msgid ""
 "I<vendor>, otherwise exits with non-zero. It uses the \"Parent\" field to "
 "browse all ancestors of the current vendor."
 msgstr ""
+"Avslutar med 0 om den aktuella återförsäljardistributionen är "
+"härledd från I<återförsäljare>. I annat fall avslutas programmet "
+"med icke-noll. Använder fältet \"Parent\" för att bläddra genom "
+"alla föräldrar till den aktuella återförsäljaren."
 
 # type: TP
 #. type: TP
 #: ../../man/dpkg-vendor.1:24
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--query>I< field>"
-msgstr "B<--query> I<namn>"
+msgstr "B<--query> I<fält>"
 
 #. type: Plain text
 #: ../../man/dpkg-vendor.1:28
@@ -12327,13 +12336,15 @@ msgid ""
 "Print on standard output the value of the vendor-specific I<field> for the "
 "current vendor."
 msgstr ""
+"Skriver värdet för det återförsäljarspecifika fältet I<fält> för den "
+"aktuella återförsäljaren på standard ut."
 
 # type: TP
 #. type: TP
 #: ../../man/dpkg-vendor.1:36
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--vendor>I< vendor>"
-msgstr "B<--divert>I< omdirigera-till>"
+msgstr "B<--vendor>I< återförsäljare>"
 
 #. type: Plain text
 #: ../../man/dpkg-vendor.1:41
@@ -12341,12 +12352,15 @@ msgid ""
 "Assumes the current vendor is I<vendor> instead of discovering it with the "
 "DEB_VENDOR environment variable or B</etc/dpkg/origins/default>."
 msgstr ""
+"Anta att den aktuella återförsäljaren är I<återförsäljare> istället "
+"för att upptäcka det via miljövariabeln DEB_VENDOR eller B</etc/"
+"dpkg/origins/default>."
 
 #. type: TP
 #: ../../man/dpkg-vendor.1:43
 #, no-wrap
 msgid "B<DEB_VENDOR>"
-msgstr ""
+msgstr "B<DEB_VENDOR>"
 
 #. type: Plain text
 #: ../../man/dpkg-vendor.1:47
@@ -12354,6 +12368,9 @@ msgid ""
 "This setting defines the current vendor. If not set, it will discover the "
 "current vendor by reading B</etc/dpkg/origins/default>."
 msgstr ""
+"Inställningen anger den aktuella återförsäljaren. Om den inte är satt "
+"kommer återförsäljaren att identifieras genom att läsa "
+"B</etc/dpkg/origins/default>."
 
 # type: Plain text
 #. type: Plain text
