--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.15.1\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-05-21 06:34+0200\n"
-"PO-Revision-Date: 2009-04-14 09:23+0100\n"
+"PO-Revision-Date: 2009-06-18 21:45+0100\n"
 "Last-Translator: Peter Krefting <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -316,7 +316,7 @@ msgstr "värdarkitektur"
 
 #: scripts/dpkg-buildpackage.pl:339
 msgid "debian/rules is not executable: fixing that."
-msgstr ""
+msgstr "debian/rules är inte exekverbar: rättar."
 
 #: scripts/dpkg-buildpackage.pl:352
 msgid "Build dependencies/conflicts unsatisfied; aborting."
@@ -339,6 +339,8 @@ msgid ""
 "it is a bad idea to generate a source package without cleaning up first, it "
 "might contain undesired files."
 msgstr ""
+"det är inte någon bra idé att generera ett källkodspaket utan att först "
+"städa upp det, det kan innehålla oönskade filer."
 
 #: scripts/dpkg-buildpackage.pl:395
 msgid "Press the return key to start signing process\n"
@@ -956,7 +958,7 @@ msgstr ""
 "Copyright © 2001 Wichert Akkerman"
 
 #: scripts/dpkg-parsechangelog.pl:33
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...]\n"
 "\n"
@@ -1000,15 +1002,19 @@ msgstr ""
 "tillgängliga\n"
 "                                utdataformat, standard är \"dpkg\" för\n"
 "                                kompatibilitet med dpkg-dev\n"
-"    --since, -s, -v <version>   ta med alla ändringar efter version\n"
-"    --until, -u <version>       ta med alla ändringar före version\n"
-"    --from, -f <version>        ta med alla ändringar från och med version\n"
-"    --to, -t <version>          ta med alla ändringar till och med version\n"
-"    --count, -c, -n <antal>     ta med <antal> poster från början (eller\n"
-"                                slutet om <antal> är lägre än 0)\n"
-"    --offset, -o <antal>        byt startpunkt för --count, räknat från\n"
-"                                början (eller slutet om <antal> är lägre\n"
-"                                än 0)\n"
+"    --since <version>,          ta med alla ändringar efter version\n"
+"      -s<version>, -v<version>\n"
+"    --until <version>,          ta med alla ändringar föreversion\n"
+"      -u<version>\n"
+"    --from <version>,           ta med alla ändringar från och med\n"
+"      -f<version>               version\n"
+"    --to <version>, -t<version> ta med alla ändringar till och med\n"
+"                                version\n"
+"    --count <antal>,            ta med <antal> poster från början\n"
+"      -c<antal>, -n<antal>      (eller slutet om <antal> är lägre än 0)\n"
+"    --offset <antal> ,          byt startpunkt för --count, räknat\n"
+"      -o<antal>                 från början (eller slutet om <antal>\n"
+"                                är lägre än 0)\n"
 "    --all                       ta med alla ändringar\n"
 
 #: scripts/dpkg-parsechangelog.pl:105
@@ -1043,9 +1049,8 @@ msgstr ""
 "      --version            visa versionsnummer.\n"
 
 #: scripts/dpkg-scanpackages.pl:71
-#, fuzzy
 msgid "-u, --udeb option is deprecated (see README.feature-removal-schedule)"
-msgstr "PGP-stödet undanbes (se README.feature-removal-schedule)"
+msgstr "flaggorna -u och --udeb undanbes (se README.feature-removal-schedule)"
 
 #: scripts/dpkg-scanpackages.pl:79
 #, perl-format
@@ -1681,7 +1686,7 @@ msgstr ""
 "Copyright © 2008 Raphael Hertzog"
 
 #: scripts/dpkg-source.pl:362
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -1735,7 +1740,7 @@ msgstr ""
 "  -l<ändringsloggfil>      hämta per version-information från denna fil.\n"
 "  -F<ändringsloggformat>   tvinga ändringsloggsformat.\n"
 "  -V<namn>=<värde>         sätt en substitueringsvariabel.\n"
-"  -T<varlistfil>           läs variabler här, inte debian/substvars.\n"
+"  -T<varlistfil>           läs variabler här.\n"
 "  -D<fält>=<värde>         överstyr eller lägg till ett .dsc-fält och "
 "värde.\n"
 "  -U<fält>                 ta bort ett fält.\n"
@@ -1942,17 +1947,17 @@ msgstr "du kan bara ange en av \"to\" och \"until\", använder \"until\""
 
 #: scripts/Dpkg/Changelog.pm:257 scripts/Dpkg/Changelog.pm:268
 #: scripts/Dpkg/Changelog.pm:283 scripts/Dpkg/Changelog.pm:298
-#, fuzzy, perl-format
+#, perl-format
 msgid "'%s' option specifies non-existing version"
-msgstr "\"until\"-flaggan anger den äldsta versionen, ignorerar"
+msgstr "\"%s\"-flaggan anger en icke-existerande version"
 
 #: scripts/Dpkg/Changelog.pm:258 scripts/Dpkg/Changelog.pm:299
 msgid "use newest entry that is smaller than the one specified"
-msgstr ""
+msgstr "använd den nyaste posten som är mindre än den angivna"
 
 #: scripts/Dpkg/Changelog.pm:269 scripts/Dpkg/Changelog.pm:284
 msgid "use oldest entry that is bigger than the one specified"
-msgstr ""
+msgstr "använd den äldta posten som är större än den angivna"
 
 #: scripts/Dpkg/Changelog.pm:310
 msgid "'since' option specifies most recent version, ignoring"
