--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,13 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Simplified Chinese (Deng Xiyue). Closes: #531387
   * Catalan (Jordi Mallach). Closes: #532109
+  * Swedish (Peter Krefting).
+
+  [ Updated man page translations ]
+  * Swedish (Peter Krefting).
+
+  [ Updated scripts translations ]
+  * Swedish (Peter Krefting).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 26 May 2009 01:26:04 +0200
 
