Update Czech translation of dpkg/dselect
po/cs.po: 1012t
dselect/po/cs.po: 279t

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,10 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * Simplified Chinese (Deng Xiyue). Closes: #531387
   * Catalan (Jordi Mallach). Closes: #532109
   * Swedish (Peter Krefting).
+  * Czech (Miroslav Kure).
+
+  [ Updated dselect translations ]
+  * Czech (Miroslav Kure).
 
   [ Updated man page translations ]
   * Swedish (Peter Krefting).
