--- a/dselect/po/cs.po
+++ b/dselect/po/cs.po
@@ -1,7 +1,7 @@
 # Czech translation for dpkg.
 #
 # Petr Cech <cech@debian.org>, 1999, 2000, 2001.
-# Miroslav Kure <kurem@debian.cz>, 2004, 2005, 2006, 2007, 2008.
+# Miroslav Kure <kurem@debian.cz>, 2004, 2005, 2006, 2007, 2008, 2009.
 #
 # Thanks go to:
 # Milan Zamazal <pdm@debian.org>
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-05-26 01:10+0200\n"
-"PO-Revision-Date: 2008-05-03 19:19+0200\n"
+"PO-Revision-Date: 2009-06-19 07:49+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1558,7 +1558,7 @@ msgstr "Dostupné informace ze souboru control"
 
 #: dselect/pkglist.cc:419
 msgid "There are no packages."
-msgstr ""
+msgstr "Nejsou zde žádné balíky."
 
 #: dselect/pkglist.cc:506
 msgid "invalid search option given"
