Symbol tagging support and implementation of optional and arch tags
Symbols might be tagged with arbitary number of tags which are separated by '|'
(aka pipe) character. Tags (only if there are any) must be enclosed in the ()
brackets right before a symbol name. Each tag can appear only once in the tag
specification for each symbol. A tag can optionally have a value. The tag value
is separated from the tag name by character '='. Tag names and values can be
arbitrary strings except they cannot contain any of the special ()|=
characters. A name of the tagged symbol can optionally be quoted with either '
or " characters (e.g. to allow whitespaces in the symbol name). If there are no
tags specified, symbol name cannot be quoted and symbol name continues up until
the first whitespace.

Example of the quoted symbol with 2 tags (the first tag has a value while the
second does not):

 (tag1=value of the first tag|tag2)"Foo::Bar::foobar()"@Base 1.0 1

Tags serve two purposes:

* they can be used for symbol marking (e.g. when a symbol must be treated
  specially under certain circumstances);
* they tell the parser that the specified symbol name must be processed in
  certain way to become a raw symbol name as found in the object files.
  Such tags are processed in the order they are specified.

Symbol files with tags are not backwards compatible, so a new parameter
'template_mode' has been added to SymbolFile::dump(). If template_mode is not
set (default), dump() emits a fully post-processed symbol specifications as
directed by their tags. Tags themselves are ommited from output and unknown
tags are ignored. If template_mode is set, dump() keeps tags in the output and
emits symbol specifications as they were read from the symbol file.

As a result, a new parameter -t was added to dpkg-gensymbols to support writing
the symbol file in template mode. Default is to write in non-template mode.

(tag|...|tagN)#include "file_to_include"

All symbols in the "file_to_include" will be 

--- a/man/dpkg-gensymbols.1
+++ b/man/dpkg-gensymbols.1
@@ -1,5 +1,5 @@
 .\" Author: Raphael Hertzog
-.TH dpkg\-gensymbols 1 "2008-08-18" "Debian Project" "dpkg utilities"
+.TH dpkg\-gensymbols 1 "2009-06-19" "Debian Project" "dpkg utilities"
 .SH NAME
 dpkg\-gensymbols \- generate symbols files (shared library dependency information)
 .
@@ -64,22 +64,118 @@ use the marker \fI#PACKAGE#\fR. It will be replaced by the real package
 name during installation of the symbols files. Contrary to the
 \fI#MINVER#\fR marker, \fI#PACKAGE#\fR will never appear in a symbols file
 inside a binary package.
+.SS Using symbol tags
+.P
+Symbol tagging is useful for marking symbols that are special in some way.  Any
+symbol can have arbitrary number of tags associated with it. While all tags are
+parsed and stored, only a couple of them are understood by
+\fBdpkg-gensymbols\fR and trigger special handling of the symbols. See
+subsection \fBStandard symbol tags\fR for reference of these tags.
+.P
+Tag specification comes right before the symbol name (no whitespace is allowed
+in between). It always starts with an opening bracket \fB(\fR, ends with a
+closing bracket \fB)\fR and must contain at least one tag. Multiple tags are
+separated by the \fB|\fR character. Each tag can optionally have a value which
+is separated form the tag name by the \fB=\fR character. Tag names and values
+can be arbitrary strings except they cannot contain any of the special \fB)\fR
+\fB|\fR \fB=\fR characters. Symbol names following a tag specification can
+optionally be quoted with either \fB'\fR or \fB"\fR characters to allow
+whitespaces in them. However, if there are no tags specified for the symbol,
+quotes are treated as part of the symbol name which continues up until the
+first space.
+.P
+ (tag1=i am marked|tag name with space)"tagged quoted symbol"@Base 1.0
+ (optional)tagged_unquoted_symbol@Base 1.0 1
+ untagged_symbol@Base 1.0
+.P
+The first symbol in the example is named \fItagged quoted symbol\fR and has two
+tags: \fItag1\fR with value \fIi am marked\fR and \fItag name with space\fR
+that is valueless. Then second symbol named \fItagged_unquoted_symbol\fR is
+tagged with the only valueless tag named \fIoptional\fR. The last symbol is an
+example of the normal untagged symbol.
+.P
+Since symbol tags are an extension to the \fIdeb-symbols(5)\fR format, they can
+only be part of the symbol file template. When \fBdpkg-gensymbols\fR writes a
+symbol file in \fIdeb-symbols(5)\fR compatible non-template mode (default), it
+fully processes symbols according to the requirements of their standard tags
+and strips all tags from the output. On the contrary, in template mode all
+symbols and their tags (both standard and unknown ones) are written in their
+orignal form as they were loaded.
+.SS Standard symbol tags
+.TP
+.B optional
+A symbol marked as optional can disappear from the library at any time and that
+will never cause \fBdpkg-gensymbols\fR to fail. However, disappeared optional
+symbols will continuously appear as MISSING in the diff in each new package
+revision.  This behaviour serves as a reminder for the maintainer that such a
+symbol needs to be removed from the symbol file or readded to the library. When
+the optional symbol, which was previously declared as MISSING, suddently
+reappears in the next revision, it will be upgraded back to the "existing"
+status with its minimum version unchanged.
+
+This tag is useful for symbols which are private or their disappearance does
+not cause ABI breakage. For example, most of C++ template instantiations fall
+into this category. Like any other tag, this one may also have an arbitrary
+value which could indicate why the symbol is considered optional.
+.TP
+.B arch=\fIarchitecture list\fR
+This tag allows to mark a symbol as arch-specific. When matching the symbol
+file against the library, all arch-specific symbols which do not concern
+current host architecture are treated like they do not exist. If an
+arch-specific symbol disappears from the arch it is concerned about, normal
+procedures for missing symbols apply and it may cause \fBdpkg-gensymbols\fR to
+fail. On the other hand, if the arch-specific symbol is found on the arch that
+it is not supposed to appear on, it is made arch neutral (i.e. the arch tag is
+dropped which triggers the symbol to appear in the diff), but it is not
+considered as new.
+
+When operating in non-templace mode, only symbols concerned for the current
+host architecture are written to the symbol file. On the contrary, all
+arch-specific symbols (including those from foreign arches) are always written
+to the symbol file template.
+
+\fIarchitecture list\fR format is the same as the one used in the
+\fIBuild-Depends\fR field of \fIdebian/control\fR (excluding enclosing []
+brackets). For example, the first symbol from the list below will be considered
+only on alpha, amd64 and ia64 architectures while the second one anywhere but
+armel.
+
+ (arch=alpha amd64 ia64)a_64bit_specific_symbol@Base 1.0
+ (arch=!armel)symbol_armel_does_not_have@Base 1.0
 .SS Using includes
 .P 
-When the set of exported symbols differ between architectures, it's no
-more possible to use a common symbols file. Using one file per
-architecture works, but it can also lead to duplication of information.
-In those cases, you can factorize the common part in some external file
+When the set of exported symbols differ between architectures, it may become
+inefficient to use a single symbol file. In those cases, an include directive
+may prove to be useful in a couple of ways:
+.IP \(bu
+You can factorize the common part in some external file
 and include that file in your \fIpackage\fR.symbols.\fIarch\fR file by
 using an include directive like this:
-.PP
+
 #include "\fIpackages\fR.symbols.common"
+.IP \(bu
+The include directive may also be tagged like any symbol:
+
+(tag|..|tagN)#include "file_to_include"
+
+As a result, all symbols included from \fIfile_to_include\fR will be considered
+to be tagged with \fItag\fR .. \fItagN\fR by default. You can use this feature
+to create a common \fIpackage\fR.symbols file which includes architecture
+specific symbol files:
+
+  common_symbol1@Base 1.0
+ (arch=amd64 ia64 alpha)#include "package.symbols.64bit"
+ (arch=!amd64 !ia64 !alpha)#include "package.symbols.32bit"
+  common_symbol2@Base 1.0
 .P
-The symbols files are read line by line, and include directives
-are processed as soon as they are encountered. This means that
-the content of the included file can override any content that appeared
-before the include directive and that any content after the
-directive can override anything contained in the included file.
+The symbols files are read line by line, and include directives are processed
+as soon as they are encountered. This means that the content of the included
+file can override any content that appeared before the include directive and
+that any content after the directive can override anything contained in the
+included file. Any symbol (or even another #include directive) in the included
+file can specify additional tags or override values of the inherited tags in
+its tag specification. However, there is no way for the symbol to untag itself
+from the inherited tags.
 .P
 An included file can repeat the header line containing the SONAME of the
 library. In that case, it overrides any header line previously read.
@@ -122,7 +218,8 @@ changes;
 ideally, it uses symbol versioning to achieve ABI stability despite
 internal changes and API extension;
 .IP \(bu 4
-it doesn't export private symbols.
+it doesn't export private symbols (such symbols can be tagged optional as
+workaround).
 .P
 While maintaining the symbols file, it's easy to notice appearance and
 disappearance of symbols. But it's more difficult to catch incompatible
@@ -163,6 +260,15 @@ Store the generated symbols file as \fIfilename\fR. If \fIfilename\fR is
 pre-existing, its content is used as basis for the generated symbols file.
 You can use this feature to update a symbols file so that it matches a
 newer upstream version of your library.
+.TP
+.BI \-t
+Write the symbol file in template mode rather than the format compatible with
+\fIdeb-symbols(5)\fR.The main difference is that in the template mode symbol
+names and tags are written in their original form contrary to the
+post-processed symbol names with tags stripped in the compatibility mode.
+Moreover, some symbols might be omitted when writing a standard
+\fIdeb-symbols(5)\fR file (according to the tag processing rules) while all
+symbols are always written to the symbol file template.
 .TP
 .BI \-c [0-4]
 Define the checks to do when comparing the generated symbols file
