Update german translation of manual pages
Update to 1663t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * Czech (Miroslav Kure).
 
   [ Updated man page translations ]
+  * German (Helge Kreutzmann).
   * Swedish (Peter Krefting).
 
   [ Updated scripts translations ]
