Update german scripts translation
Update to 487t0f1u.

--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * Swedish (Peter Krefting).
 
   [ Updated scripts translations ]
+  * German (Helge Kreutzmann).
   * Swedish (Peter Krefting).
 
  -- Guillem Jover <guillem@debian.org>  Tue, 26 May 2009 01:26:04 +0200
