Update german scripts translation
Update to 488t0f0u.

--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2009-06-20 09:36+0200\n"
-"PO-Revision-Date: 2009-06-20 11:59+0200\n"
+"PO-Revision-Date: 2009-06-20 14:13+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -966,7 +966,6 @@ msgstr "keine debian/symbols-Datei als Basis zur Erzeugung von %s verwendet"
 msgid "Usage: %s [<option>...] <file>...\n"
 msgstr "Aufruf: %s [<Option>...] <Datei>...\n"
 
-
 #: scripts/dpkg-name.pl:55
 msgid ""
 "\n"
@@ -982,6 +981,19 @@ msgid ""
 "file.deb changes to <package>_<version>_<architecture>.<package_type>\n"
 "according to the 'underscores convention'.\n"
 msgstr ""
+"\n"
+"Optionen:\n"
+"  -a, --no-architecture    kein Architekturteil im Dateinamen.\n"
+"  -o, --overwrite          überschreibe, falls Datei existiert.\n"
+"  -k, --symlink            erstelle keine neue Datei, sondern einen Symlink.\n"
+"  -s, --subdir [Verz]      verschiebe Datei in Unterverzeichnis (Vorsicht!).\n"
+"  -c, --create-dir         erstelle Zielverzeichnis falls nicht\n"
+"                           vorhanden (Vorsicht!).\n"
+"  -h, --help               zeige diese Hilfenachricht.\n"
+"  -v, --version            zeige die Version.\n"
+"\n"
+"Datei.deb ändert sich in <Paket>_<Version>_<Architektur>.<Pakettyp>\n"
+"gemäß der »Unterstrich-Konvention«.\n"
 
 #: scripts/dpkg-name.pl:77
 #, perl-format
