--- a/man/dpkg-gensymbols.1
+++ b/man/dpkg-gensymbols.1
@@ -67,8 +67,8 @@ inside a binary package.
 .SS Using symbol tags
 .P
 Symbol tagging is useful for marking symbols that are special in some way.  Any
-symbol can have arbitrary number of tags associated with it. While all tags are
-parsed and stored, only a couple of them are understood by
+symbol can have an arbitrary number of tags associated with it. While all tags are
+parsed and stored, only a some of them are understood by
 \fBdpkg-gensymbols\fR and trigger special handling of the symbols. See
 subsection \fBStandard symbol tags\fR for reference of these tags.
 .P
@@ -90,17 +90,21 @@ first space.
 .P
 The first symbol in the example is named \fItagged quoted symbol\fR and has two
 tags: \fItag1\fR with value \fIi am marked\fR and \fItag name with space\fR
-that is valueless. Then second symbol named \fItagged_unquoted_symbol\fR is
-tagged with the only valueless tag named \fIoptional\fR. The last symbol is an
+that has no value. The second symbol named \fItagged_unquoted_symbol\fR is
+only tagged with the tag named \fIoptional\fR. The last symbol is an
 example of the normal untagged symbol.
 .P
-Since symbol tags are an extension to the \fIdeb-symbols(5)\fR format, they can
-only be part of the symbol file template. When \fBdpkg-gensymbols\fR writes a
-symbol file in \fIdeb-symbols(5)\fR compatible non-template mode (default), it
-fully processes symbols according to the requirements of their standard tags
-and strips all tags from the output. On the contrary, in template mode all
-symbols and their tags (both standard and unknown ones) are written in their
-orignal form as they were loaded.
+Since symbol tags are an extension of the \fIdeb-symbols(5)\fR format, they can
+only be part of the symbols files used in source packages (those files
+should then be seen as templates used to build the symbols files that are
+embedded in binary packages). When
+\fBdpkg-gensymbols\fR is called without the \fI\-t\fR option, it will
+output symbols files compatible to the \fIdeb-symbols(5)\fR format:
+it fully processes symbols according to the requirements of their standard tags
+and strips all tags from the output. On the contrary, in template mode
+(\fI\-t\fR) all symbols and their tags (both standard and unknown ones)
+are kept in the output and are written in their orignal form as they were
+loaded.
 .SS Standard symbol tags
 .TP
 .B optional
@@ -109,36 +113,39 @@ will never cause \fBdpkg-gensymbols\fR to fail. However, disappeared optional
 symbols will continuously appear as MISSING in the diff in each new package
 revision.  This behaviour serves as a reminder for the maintainer that such a
 symbol needs to be removed from the symbol file or readded to the library. When
-the optional symbol, which was previously declared as MISSING, suddently
+the optional symbol, which was previously declared as MISSING, suddenly
 reappears in the next revision, it will be upgraded back to the "existing"
 status with its minimum version unchanged.
 
-This tag is useful for symbols which are private or their disappearance does
+This tag is useful for symbols which are private where their disappearance do
 not cause ABI breakage. For example, most of C++ template instantiations fall
 into this category. Like any other tag, this one may also have an arbitrary
-value which could indicate why the symbol is considered optional.
+value: it could be used to indicate why the symbol is considered optional.
 .TP
 .B arch=\fIarchitecture list\fR
-This tag allows to mark a symbol as arch-specific. When matching the symbol
-file against the library, all arch-specific symbols which do not concern
-current host architecture are treated like they do not exist. If an
-arch-specific symbol disappears from the arch it is concerned about, normal
-procedures for missing symbols apply and it may cause \fBdpkg-gensymbols\fR to
-fail. On the other hand, if the arch-specific symbol is found on the arch that
-it is not supposed to appear on, it is made arch neutral (i.e. the arch tag is
-dropped which triggers the symbol to appear in the diff), but it is not
-considered as new.
+This tag allows to restrict the set of architectures where the symbol
+is supposed to exist. When the symbols list is updated with the symbols
+discovered in the library, all arch-specific symbols which do not concern
+the current host architecture are treated as if they did not exist. If an
+arch-specific symbol matching the current host architecture does not exist
+in the library, normal procedures for missing symbols apply and it may
+cause \fBdpkg-gensymbols\fR to fail. On the other hand, if the
+arch-specific symbol is found when it was not supposed to exist (because
+the current host architecture is not listed in the tag), it is made arch
+neutral (i.e. the arch tag is dropped and the symbol will appear in the
+diff due to this change), but it is not considered as new.
 
-When operating in non-templace mode, only symbols concerned for the current
-host architecture are written to the symbol file. On the contrary, all
-arch-specific symbols (including those from foreign arches) are always written
-to the symbol file template.
+When operating in the default non-template mode, among arch-specific symbols
+only those that match the current host architecture are written to the
+symbols file. On the contrary, all arch-specific symbols (including those
+from foreign arches) are always written to the symbol file when operating
+in template mode.
 
-\fIarchitecture list\fR format is the same as the one used in the
-\fIBuild-Depends\fR field of \fIdebian/control\fR (excluding enclosing []
-brackets). For example, the first symbol from the list below will be considered
-only on alpha, amd64 and ia64 architectures while the second one anywhere but
-armel.
+The format of \fIarchitecture list\fR is the same as the one used in the
+\fIBuild-Depends\fR field of \fIdebian/control\fR (except the enclosing
+square brackets []). For example, the first symbol from the list below
+will be considered only on alpha, amd64 and ia64 architectures while the
+second one anywhere except on armel.
 
  (arch=alpha amd64 ia64)a_64bit_specific_symbol@Base 1.0
  (arch=!armel)symbol_armel_does_not_have@Base 1.0
@@ -174,8 +181,8 @@ file can override any content that appeared before the include directive and
 that any content after the directive can override anything contained in the
 included file. Any symbol (or even another #include directive) in the included
 file can specify additional tags or override values of the inherited tags in
-its tag specification. However, there is no way for the symbol to untag itself
-from the inherited tags.
+its tag specification. However, there is no way for the symbol to remove
+any of the inherited tags.
 .P
 An included file can repeat the header line containing the SONAME of the
 library. In that case, it overrides any header line previously read.
@@ -263,7 +270,7 @@ newer upstream version of your library.
 .TP
 .BI \-t
 Write the symbol file in template mode rather than the format compatible with
-\fIdeb-symbols(5)\fR.The main difference is that in the template mode symbol
+\fIdeb-symbols(5)\fR. The main difference is that in the template mode symbol
 names and tags are written in their original form contrary to the
 post-processed symbol names with tags stripped in the compatibility mode.
 Moreover, some symbols might be omitted when writing a standard
