dpkg-gensymbols: do not output deprecated symbols
The deprecated symbols appear commented with “#MISSING:”, they should
appear in the explanatory diff but not in the file generated.

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ dpkg (1.15.3) UNRELEASED; urgency=low
     restrict the set of architectures where the symbol is supposed to exist.
     Thanks to Modestas Vainius <modestas@vainius.eu> for the patch.
     See dpkg-gensymbols(1) for more information. Closes: #521551
+  * Do not include #MISSING lines in symbols files integrated in binary
+    packages. Closes: #526251
 
   [ Updated dpkg translations ]
   * Simplified Chinese (Deng Xiyue). Closes: #531387
