dpkg-gensymbols: add new “ignore-blacklist” tag
Add new tag "ignore-blacklist" to force-include symbols which are
normally blacklisted. This can be useful for libgcc to include symbols
that the toolchain allows to be shared but that are often static
(and hence are blacklisted for this reason). Closes: #533642

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,10 @@ dpkg (1.15.3) UNRELEASED; urgency=low
     packages. Closes: #526251
   * Assume an implicit version of "Base" for all unversioned symbols
     that are merged into a SymbolFile. Closes: #533181
+  * Add new tag "ignore-blacklist" to force-include symbols which are
+    normally blacklisted. This can be useful for libgcc to include symbols
+    that the toolchain allows to be shared but that are often static (and
+    hence are blacklisted for this reason). Closes: #533642
 
   [ Updated dpkg translations ]
   * Simplified Chinese (Deng Xiyue). Closes: #531387
