Dpkg::Substvars: restructure to have a separate namespace for variables
The addition of “_used” in the structure was in conflict with
a possible variable of the same name. So put the variables in
a dedicated hash to avoid this conflict and rename “_used” into
“used”.

Correct the warning message too.

Also add Joachim in the THANKS file for his contribution.

--- a/THANKS
+++ b/THANKS
@@ -79,6 +79,7 @@ Jeroen van Wolffelaar <jeroen@wolffelaar.nl>
 Jim Pick <jim@jimpick.com>
 Jim Van Zandt <jrv@vanzandt.mv.com>
 Jiří Paleček <jpalecek@web.de>
+Joachim Breitner <mail@joachim-breitner.de>
 Joel Klecker <jk@espy.org>
 Joey Hess <joeyh@debian.org>
 Johannes Veser <veser@gmx.de>
