Dpkg::Vendor::get_vendor_file(): replaces spaces by dashes
Also lookup filenames with dashes replacing spaces in the name
of the vendor.

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * In dpkg-source, explicitely pass --keyring ~/.gnupg/trustedkeys.gpg to
     gpgv as it does not use it if other --keyring parameters are given.
     Closes: #530769
+  * In dpkg-vendor, allow to use dashes instead of spaces in vendor
+    filenames. Closes: #532222
 
   [ Joachim Breitner ]
   * Warn about unused substvars in dpkg-gencontrol. Closes: #532760
