--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,8 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   [ Raphael Hertzog ]
   * Unset TAR_OPTIONS when creating/extracting tar archives for source
     packages. Closes: #530860
-  * Add cleanup of known invalid (master) alternatives in preinst script.
-    Closes: #530633, #531611, #532739
+  * Add cleanup of all invalid (master) alternatives in preinst script.
+    Closes: #530633, #531611, #532739, #521760
   * Let update-alternatives fix a manual alternative with a dangling symlink
     by switching it to automatic mode. Closes: #529999
   * Add missing paragraph separator in dpkg-buildpackage(1). Thanks to Per
