Dpkg::Deps: fix dependency parsing code
Fix dependency parsing code in Dpkg::Deps to not accept "foo\nbar"
even if foo is valid. A regex was improperly matching "\n" as
end of string due to usage of the "m" modifier.

Also improve the warning displayed when the dependency can't be parsed.

Add a non-regression test to ensure that this problem doesn't come back.

Reported-by: Andrew Sayers <andrew-dpkg@pileofstuff.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,6 +40,9 @@ dpkg (1.15.3) UNRELEASED; urgency=low
     (recognized by ~bpo or ~vola in their version number). Closes: #525115
   * Support all checksum algorithms in dpkg-scanpackages/dpkg-scansources.
     Closes: #533828
+  * Fix dependency parsing code in Dpkg::Deps to not accept "foo\nbar"
+    even if foo is valid. Closes: #534464
+    Thanks to Andrew Sayers for spotting the problem.
 
   [ Joachim Breitner ]
   * Warn about unused substvars in dpkg-gencontrol. Closes: #532760
