dpkg-split: Use the correct units (KiB) when referring to partsize

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * Fix dpkg-scanpackages to properly detect spurious overrides.
   * Rewrite dpkg-name in perl.
   * Do not close already closed files in some error conditions in libdpkg.
+  * Use the correct units (KiB) in dpkg-split when referring to partsize.
 
   [ Raphael Hertzog ]
   * Unset TAR_OPTIONS when creating/extracting tar archives for source
