man: Document in dpkg-statoverride the format to specify mode
Closes: #534551

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * Rewrite dpkg-name in perl.
   * Do not close already closed files in some error conditions in libdpkg.
   * Use the correct units (KiB) in dpkg-split when referring to partsize.
+  * Document in dpkg-statoverride(8) that mode needs to be specified in
+    octal. Closes: #534551
 
   [ Raphael Hertzog ]
   * Unset TAR_OPTIONS when creating/extracting tar archives for source
