man:  Mark argument names in dpkg-statoverride.1 in italic

--- a/man/dpkg-statoverride.8
+++ b/man/dpkg-statoverride.8
@@ -1,4 +1,4 @@
-.TH dpkg\-statoverride 8 "2008-08-18" "Debian project" "dpkg utilities"
+.TH dpkg\-statoverride 8 "2009-06-26" "Debian project" "dpkg utilities"
 .SH NAME
 dpkg\-statoverride \- override ownership and mode of files
 .
@@ -24,18 +24,18 @@ overrides.
 .SH COMMANDS
 .TP
 .BI \-\-add " user group mode file"
-Add an override for \fBfile\fR. \fBfile\fR does not need to exist
+Add an override for \fIfile\fP. \fIfile\fP does not need to exist
 when this command is used; the override will be stored and used later.
 Users and groups can be specified by their name (for example \fBroot\fR
 or \fBnobody\fR), or by their number by prepending the number with a
 `\fB#\fR' (for example \fB#0\fR or \fB#65534\fR). The \fImode\fR needs
 to be specified in octal.
 
-If \-\-update is specified and \fBfile\fR exists, it is immediately
+If \-\-update is specified and \fIfile\fP exists, it is immediately
 set to the new owner and mode.
 .TP
 .BI \-\-remove " file"
-Remove an override for \fBfile\fR, the status of \fBfile\fR is left
+Remove an override for \fIfile\fP, the status of \fIfile\fP is left
 unchanged by this command.
 .TP
 .BR \-\-list " [\fIglob-pattern\fP]"
@@ -52,7 +52,7 @@ Show the version and exit.
 .SH OPTIONS
 .TP
 .BI \-\-admindir " directory"
-Change the directory of the dpkg database where the statoverride file is
+Change the \fIdirectory\fP of the dpkg database where the statoverride file is
 also stored. Defaults to \fI/var/lib/dpkg\fP.
 .TP
 .B \-\-force
