--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 dpkg (1.15.3) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
-  * Unset TAR_OPTIONS when extracting .deb archives. Closes: #530860
+  * Unset TAR_OPTIONS when extracting .deb archives.
   * Use default compressor values in dpkg-source from Dpkg::Source::Compressor.
   * Fix dpkg-scanpackages to properly detect spurious overrides.
   * Rewrite dpkg-name in perl.
