Dpkg::ErrorHandling: Explicitly pass field argument to unknown()

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ dpkg (1.15.3) UNRELEASED; urgency=low
   * Document in dpkg-statoverride(8) that mode needs to be specified in
     octal. Closes: #534551
   * Mark argument names in dpkg-statoverride.1 in italic.
+  * Explicitly pass field argument to Dpkg::ErrorHandling::unknown().
 
   [ Raphael Hertzog ]
   * Unset TAR_OPTIONS when creating/extracting tar archives for source
